[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Tamara G <tamara.gabuniya@gmail.com>"]
packages = [
  { include = "brain_games" },
]
readme = "README.md"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
